Bug 452960 - No mouse cursor in OBS window capture
Summary: No mouse cursor in OBS window capture
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.24.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2022-04-24 23:08 UTC by mashuptwice
Modified: 2022-08-10 20:34 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
window recording (140.50 KB, video/x-matroska)
2022-04-24 23:08 UTC, mashuptwice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mashuptwice 2022-04-24 23:08:59 UTC
Created attachment 148346 [details]
window recording

SUMMARY
When recording  a windows content via OBS' pipewire window capture on wayland, no mouse pointer is visible. According to OBS dev, KDE doesn't send cursor information. https://github.com/obsproject/obs-studio/issues/5446#issuecomment-1104636081


STEPS TO REPRODUCE
1. Install obs-studio
2. record via Window Capture (PipeWire)
3. no cursor visible in recording

OBSERVED RESULT
No visible mouse cursor on window capture. 
Cursor is visible when doing a screen capture.

EXPECTED RESULT
Mouse cursor should be visible.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 5.17.4-arch1-1 / plasmashell 5.24.4
KDE Frameworks Version: plasma-framework 5.93.0-4
Qt Version: qt6-base 6.3.0-3

ADDITIONAL INFORMATION
Comment 1 postix 2022-07-28 12:06:39 UTC
Can confirm on

Operating System: openSUSE Tumbleweed 20220725
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.11-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 580 Series

when recording "windows". It does however work when recording "screens".
Comment 2 Bug Janitor Service 2022-08-09 15:08:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2803
Comment 3 Bug Janitor Service 2022-08-09 15:18:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/124
Comment 4 Vlad Zahorodnii 2022-08-10 06:37:33 UTC
Git commit 7b0219ea84f574ddc0ad69f8fe965bdf413cd3cb by Vlad Zahorodnii.
Committed on 09/08/2022 at 15:18.
Pushed by vladz into branch 'master'.

ScreenCast: Make cursor mode effective with window screencasting

One can request a window screencast with cursor, but that won't work
in Plasma Wayland because the cursor mode isn't forwarded to
stream_window request.

M  +1    -1    src/screencast.cpp
M  +5    -4    src/waylandintegration.cpp
M  +1    -1    src/waylandintegration.h
M  +1    -1    src/waylandintegration_p.h

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/7b0219ea84f574ddc0ad69f8fe965bdf413cd3cb
Comment 5 Vlad Zahorodnii 2022-08-10 06:57:41 UTC
Git commit c3f9aab3297f95ddba90747490e45a0b3a629338 by Vlad Zahorodnii.
Committed on 10/08/2022 at 06:38.
Pushed by vladz into branch 'master'.

plugins/screencast: Allow including cursor in window screencasts

M  +11   -3    src/plugins/screencast/screencastmanager.cpp
M  +3    -1    src/plugins/screencast/screencastmanager.h

https://invent.kde.org/plasma/kwin/commit/c3f9aab3297f95ddba90747490e45a0b3a629338