plugins/screencast: Allow including cursor in window screencasts

BUG: 452960